--- a/style.css
+++ b/style.css
@@ -11,6 +11,30 @@ html,body{
     place-items: center;
 }
 
+/* Style for main form container */
+.containerWeather {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  width: 100%;
+  margin: 0 auto;
+  margin-bottom: 3px;
+  text-align: center;
+}
+
+/* Style for success messages*/
+.successMsg {
+  border-radius: 3px;
+  background-color: green;
+  padding: 5px;
+  width: auto;
+  margin: 0 auto;
+  margin-bottom: 3px;
+  text-align: center;
+  color: white;
+  font-weight:bold;
+}
+
 ::selection{
     color: #fff;
     background: #007bff;
