--- a/style.css
+++ b/style.css
@@ -106,7 +106,8 @@ html,body{
     border-radius: 10px;
     padding: 8px 10px;
     font-size: 14px;
-    word-break: break-all;
+    text-align: left;
+    /* word-break: break-all; */
 }
 .form .user-inbox .msg-header p{
     color: #333;
