--- a/style.css
+++ b/style.css
@@ -6,9 +6,24 @@
     font-family: 'Poppins', sans-serif;
 }
 html,body{
-    display: grid;
     height: 100%;
     place-items: center;
+}
+
+.header {
+  padding: 20px;
+  text-align: center;
+  background: blue;
+  color: white;
+  font-size: 30px;
+}
+
+.footer {
+  padding: 60px;
+  text-align: center;
+  background: black;
+  color: white;
+  font-size: 30px;
 }
 
 /* Style for main form container */
@@ -55,7 +70,7 @@ html,body{
 }
 
 .wrapper{
-    width: 500px;
+    width: 95%;
     background: #fff;
     border-radius: 5px;
     border: 1px solid lightgrey;
@@ -175,13 +190,22 @@ html,body{
     background: #006fef;
 }
 
+.testValueContainer {
+    display: none;
+	align-items: center;
+    justify-content: center;
+	width: 100%;
+	text-align: center;
+}
+
 .container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-  width: 1200px;
-  margin: 0 auto;
-  text-align: center;
+	border-radius: 5px;
+	background-color: #f2f2f2;
+	padding: 20px;
+	width: 80%;
+	margin: 0 auto;
+	text-align: center;
+
 }
 
 /* To create two columns for form. */
@@ -196,4 +220,82 @@ html,body{
   content: "";
   display: table;
   clear: both;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+p {
+    color: #444;
+}
+
+button:focus {
+    outline: 0;
+}
+
+.page-description {
+    font-size: 1.1rem;
+    margin: 0 auto;
+}
+
+
+
+.no-browser-support {
+    display: none;
+    font-size: 1.2rem;
+    color: #e64427;
+    margin-top: 35px;
+}
+
+.app {
+    margin: 40px auto;
+}
+
+#note-textarea {
+    margin: 20px 0;
+}
+
+#recording-instructions {
+    margin: 15px auto 60px;
+}
+
+#notes {
+    padding-top: 20px;
+}
+
+.note .header {
+    font-size: 0.9em;
+    color: #888;
+    margin-bottom: 10px;
+}
+
+.note .delete-note,
+.note .listen-note {
+    text-decoration: none;
+    margin-left: 15px;
+}
+
+.note .content {
+    margin-bottom: 40px;
+}
+
+@media (max-width: 768px) {
+    .container {
+        padding: 50px 25px;
+    }
+
+    button {
+        margin-bottom: 10px;
+    }
+
+}   
+
+
+
+/* -- Demo ads -- */
+
+@media (max-width: 1200px) {
+    #bsaHolder{ display:none;}
 }
