--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ html,body{
     transform: translateY(-50%);
     transition: all 0.3s ease;
 }
-.wrapper .typing-field .input-data input:valid ~ button{
+.wrapper .typing-field .input-data input:focus ~ button{
     opacity: 1;
     pointer-events: auto;
 }
