--- a/style.css
+++ b/style.css
@@ -235,7 +235,12 @@ p {
 /* button:focus {
     outline: 0;
 } */
-
+.robot{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border-top: 10px;
+}
 .page-description {
     font-size: 1.1rem;
     margin: 0 auto;
