--- a/style.css
+++ b/style.css
@@ -29,16 +29,26 @@ body {
   font-size: 30px;
 }
 
+/*style for weather container*/
+.results {
+    min-height: 35rem;
+    max-height: 35rem;
+    overflow-y: auto;
+    background-color: #f2f2f2;
+}
+
 /* Style for main form container */
 .containerWeather {
   border-radius: 5px;
   background-color: #f2f2f2;
+  border: #00000021 1px solid;
   padding: 20px;
   width: 100%;
   margin: 0 auto;
   margin-bottom: 3px;
   text-align: center;
 }
+
 
 /* Style for success messages*/
 .successMsg {
@@ -178,17 +188,19 @@ body {
   cursor: pointer;
   outline: none;
   opacity: 0;
-  pointer-events: none;
+  /* pointer-events: none; */
   border-radius: 3px;
   background: #007bff;
   border: 1px solid #007bff;
   transform: translateY(-50%);
   transition: all 0.3s ease;
 }
+
 .wrapper .typing-field .input-data input:focus ~ button {
-  opacity: 1;
-  pointer-events: auto;
+    opacity: 1;
+    pointer-events: auto;
 }
+
 .typing-field .input-data button:hover {
   background: #006fef;
 }
@@ -317,16 +329,20 @@ h1 {
 }
 
 #continues {
-  background-color: #6fda6f36;
+  background-color: #6fa2da36;
 }
 #continues:hover {
   background-color: #6fda6fe3;
 }
 #ends {
-  background-color: #ce2e2e82;
+  background-color: #6fa2da36;
 }
 #ends:hover {
   background-color: #ce2e2e;
+}
+
+.hide {
+    display: none;
 }
 
 @keyframes fadeIn {
@@ -388,6 +404,8 @@ h1 {
   position: relative;
   top: 1px;
 }
+
+
 
 /* -- Demo ads -- */
 
