--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ body {
   background: #007bff;
   border-radius: 10px;
   padding: 8px 10px;
-  font-size: 0.77rem;
+  font-size: 0.85rem;
   text-align: left;
   /* word-break: break-all; */
 }
@@ -203,6 +203,10 @@ body {
 
 .typing-field .input-data button:hover {
   background: #006fef;
+}
+
+.removeEvent {
+    pointer-events: none;
 }
 
 .testValueContainer {
@@ -278,8 +282,9 @@ h1 {
   margin-top: 35px;
 }
 
+/*container of voice and register button*/
 .app {
-  margin: 40px auto;
+  margin: 1% auto;
 }
 
 #note-textarea {
@@ -332,17 +337,13 @@ h1 {
   background-color: #6fa2da36;
 }
 #continues:hover {
-  background-color: #6fda6fe3;
+  background-color: #82c782e3;
 }
 #ends {
   background-color: #6fa2da36;
 }
 #ends:hover {
-  background-color: #ce2e2e;
-}
-
-.hide {
-    display: none;
+  background-color: #ac4a4a;
 }
 
 @keyframes fadeIn {
@@ -389,7 +390,7 @@ h1 {
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
-  font-family: Arial;
+  font-family: "Poppins", sans-serif;
   font-size: 15px;
   font-weight: bold;
   padding: 6px 24px;
