--- a/style.css
+++ b/style.css
@@ -275,6 +275,11 @@ h1 {
   justify-content: center;
 }
 
+.imgContainer img {
+    width: 25%;
+    min-height: max-content;
+}
+
 .no-browser-support {
   display: none;
   font-size: 1.2rem;
